# Descent3

./: .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md  a  vcpkg.json
2dlib/: font.cpp  hardsurf.cpp  memsurf.cpp  pen.cpp  pentext.cpp  screen.cpp  surface.cpp  viewport.cpp
AudioEncode/: encoder.cpp
Descent3/: AIGoal.cpp  AIGoal.h  AImain.cpp  BOA.cpp  BOA.h  Briefing.cpp  BriefingParse.cpp  BriefingParse.h  CMakeLists.txt  ConfigItem.cpp  ConfigItem.h  Controls.cpp  CtlCfgElem.cpp  CtlCfgElem.h  D3ForceFeedback.cpp  D3ForceFeedback.h  DllWrappers.cpp  DllWrappers.h  Game2DLL.cpp  GameCheat.cpp  GameLoop.cpp  Inventory.cpp  Inventory.h  LoadLevel.cpp  LoadLevel.h  Mission.cpp  Mission.h  NewPyroGauges.cpp  NewPyroGauges.h  ObjInit.cpp  ObjScript.cpp  ObjScript.h  OsirisLoadandBind.cpp  PilotPicsAPI.cpp  PilotPicsAPI.h  Player.cpp  SLEW.cpp  SmallViews.cpp  SmallViews.h  TelCom.cpp  (+176 more)
bitmap/: bitmain.cpp  lightmap.cpp  pcx.cpp  tga.cpp
cfile/: cfile.cpp  cfile.h  hog.cpp  hogfile.cpp  hogfile.h
czip/: BitIO.cpp  HuffmanAdapt.cpp  HuffmanBasic.cpp
d3music/: musicapi.cpp
dd_lnxsound/: lnxsound.cpp  mixer.cpp  sdlsound.cpp
dd_sndlib/: ddsoundload.cpp  ssl_lib.cpp
ddebug/: CMakeLists.txt  lnxdebug.cpp  lnxmono.cpp
ddio/: CMakeLists.txt  lnxforcefeedback.cpp  lnxkey_sdl.cpp  winforcefeedback.cpp
ddio_common/: ddio.cpp  key.cpp
ddio_lnx/: lnxcdrom.cpp  lnxfile.cpp  lnxforcefeedback.cpp  lnxio.cpp  lnxkey.cpp  lnxkey_null.cpp  lnxkey_raw.cpp  lnxkey_sdl.cpp  lnxmouse.cpp  lnxtimer.cpp  sdljoy.cpp
ddvid_lnx/: video_lnx.cpp
editor/: CMakeLists.txt
emscripten/: CMakeLists.txt  index.html
fix/: fix.cpp
grtext/: grfont.cpp  grtext.cpp  textaux.cpp
lib/: Macros.h  ddio.h  debug.h  debugbreak.h  demofile.h  directplay.h  fix.h  forcefeedback.h  game2dll.h  (+5 more)
libmve/: CMakeLists.txt  mveasm.cpp  mvelibl.h  snd8to16.h
misc/: CMakeLists.txt  error.cpp  log.cpp  psglob.cpp  pstring.cpp
renderer/: CMakeLists.txt  HardwareClipper.cpp  HardwareDraw.cpp  HardwareGlobalVars.cpp  HardwareInstance.cpp  HardwareOpenGL.cpp  HardwarePoints.cpp  HardwareSetup.cpp  HardwareTransforms.cpp  SoftwareClipper.cpp  SoftwareDraw.cpp  SoftwareGlobalVars.cpp  SoftwareInstance.cpp  SoftwareOpenGL.cpp  SoftwareOpenGLMeshBuilder.cpp  SoftwarePoints.cpp  SoftwareSetup.cpp  dyna_gl.h  lnxscreenmode.cpp  opengl.cpp  opengl_ryan.cpp
sndlib/: CMakeLists.txt  hlsoundlib.cpp  sndrender.cpp  sndrender.h  soundload.cpp
(+152 files in other folders)
